templates/app_infra/security_groups.yaml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  DBPort:
    Type: Number
    Description: Database port
  AppName:
    Type: String

Resources:
  BastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EC2 App Security Group
      VpcId: "{{resolve:ssm:/net/vpc/id}}"
      Tags:
        - Key: Name
          Value: !Sub "${AppName}-bastion-sg"

  EC2AppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EC2 App Security Group
      VpcId: "{{resolve:ssm:/net/vpc/id}}"
      Tags:
        - Key: Name
          Value: !Sub "${AppName}-ec2-sg"

  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: DB Security Group
      VpcId: "{{resolve:ssm:/net/vpc/id}}"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref DBPort
          ToPort: !Ref DBPort
          SourceSecurityGroupId: !Ref EC2AppSecurityGroup
        - IpProtocol: tcp
          FromPort: !Ref DBPort
          ToPort: !Ref DBPort
          SourceSecurityGroupId: !Ref BastionSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub "${AppName}-db-sg"

  LBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow HTTP and HTTPS for Load Balancer"
      VpcId: "{{resolve:ssm:/net/vpc/id}}"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${AppName}-lb-sg"

  BastionSGIDParam:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub /ec2/securitygroups/bastion-sg/id
      Value: !GetAtt BastionSecurityGroup.GroupId
      Type: String

  EC2SGIDParam:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub /ec2/securitygroups/ec2-sg/id
      Value: !GetAtt EC2AppSecurityGroup.GroupId
      Type: String

  DBSGIDParam:
    Type: AWS::SSM::Parameter
    Properties:
      Name: /ec2/securitygroups/db-sg/id
      Value: !GetAtt DBSecurityGroup.GroupId
      Type: String

  LBSGIDParam:
    Type: AWS::SSM::Parameter
    Properties:
      Name: /ec2/securitygroups/lb-sg/id
      Value: !GetAtt LBSecurityGroup.GroupId
      Type: String
